man-db (2.5.5-4) UNRELEASED; urgency=low

  * Upgrade to debhelper v7.

 -- Colin Watson <cjwatson@debian.org>  Fri, 14 Aug 2009 12:39:02 +0100

man-db (2.5.5-3) unstable; urgency=low

  * Use dh_lintian.
  * Fix locale_macros groff version test not to think that 1.20.1 >= 1.20.2.

 -- Colin Watson <cjwatson@debian.org>  Mon, 20 Jul 2009 11:00:03 +0100

man-db (2.5.5-2) unstable; urgency=low

  * Run the (as yet rather small) test suite on build.
  * Build-depend on po4a (closes: #530897).

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 May 2009 23:24:33 +0100

man-db (2.5.5-1) unstable; urgency=low

  * New upstream release:
    - Fix an uninitialised variable when sorting manual page candidates that
      could lead to excessive memory allocation and possible crashes
      (thanks, Dustin Marquess; closes: #519647).
    - man(1): Fix missing backslash in -r default (thanks, Will Day; closes:
      #519162).

 -- Colin Watson <cjwatson@debian.org>  Sat, 14 Mar 2009 23:32:45 +0000

man-db (2.5.4-2) unstable; urgency=low

  * Backport from trunk:
    - Fix handling of pages that declare a non-default encoding in their
      preprocessor lines. Thanks to Hugo Herbelin for some of the ideas here
      (closes: #519095).

 -- Colin Watson <cjwatson@debian.org>  Tue, 10 Mar 2009 23:51:44 +0000

man-db (2.5.4-1) unstable; urgency=low

  * New upstream release.
    - Exit as soon as possible if database writes return ENOSPC (closes:
      #167159).
    - Make it possible to override man's default of discarding stderr when
      stdout is a terminal (closes: #480996).
    - Reorganise lexgrog to stop on any unrecognised roff request, rather
      than continuing and often littering the database with garbage (closes:
      #271402).
    - Make handling of terminal widths for cat pages configurable (closes:
      #121997).
    - Improve sorting and de-duplication of manual page candidates (closes:
      #389762, #496172).