@@ -1,6 +1,5 @@
 etc
 usr/bin
-usr/lib/man-db
 usr/sbin
 usr/share/man-db
 var/cache/man
