@@ -1,0 +1,4 @@
+# Compatibility symlinks for old /etc/cron.*/ conffiles that may not have
+# been updated.
+usr/bin/man usr/lib/man-db/man
+usr/bin/mandb usr/lib/man-db/mandb
